force-app/main/default/objects/LLC_BI__Address__c/LLC_BI__Address__c.object-meta.xml
<CustomObject>
    <description>This lookup object captures address information that does not exist on the standard Contact object, such as previous addresses.</description>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>