force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__City__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__City__c</fullName>
    <description>The user populates this text field to document the borrower’s city. By default, this field is blank.</description>
    <inlineHelpText>Enter the city in this field.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>