force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user populates this lookup field to indicate the contact record to which an address record refers. By default, this field is blank.</description>
    <inlineHelpText>Enter the contact record to which this address refers.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>