force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Country__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Country__c</fullName>
    <description>The user populates this text field to document the borrower’s country. By default, this field is blank.</description>
    <inlineHelpText>Enter the country in this field.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>