force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Is_Current__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is selected to indicate the applicant’s address is their current address information. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to indicate the applicant’s address is current.</inlineHelpText>
    <label>Is Current Address</label>
    <type>Checkbox</type>
</CustomField>