force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Months_At_Residence__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Months_At_Residence__c</fullName>
    <description>This number field is populated to indicate the applicant’s total number of months at their current residence. By default, this field is blank.</description>
    <inlineHelpText>This field displays the applicant’s total number of months at their current residence.</inlineHelpText>
    <label>Months at Residence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>