force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Postal_Code__c</fullName>
    <description>The user populates this text field to document the borrower’s postal code. By default, this field is blank.</description>
    <inlineHelpText>Enter the postal code in this field.</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>