force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__State__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__State__c</fullName>
    <description>The user populates this text field to document the borrower’s state. By default, this field is blank.</description>
    <inlineHelpText>Enter the state in this field.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>