force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Street__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Street__c</fullName>
    <description>The user populates this text field to document the borrower’s street address. By default, this field is blank.</description>
    <inlineHelpText>Enter the street address in this field.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>