force-app/main/default/objects/LLC_BI__Address__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>The user populates this picklist field to indicate the type of address for the contact record. By default, this field is blank.</description>
    <inlineHelpText>Select the type of address from the picklist.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>PO Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>